--- a/src/Todo/style.css
+++ b/src/Todo/style.css
@@ -1,21 +1,3 @@
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.fullWidth {
-    width: 100%;
-}
-
-.todoItem {
-    display: flex;
-    margin: 1rem;
-    align-items: center;
-}
-
-.todoItem > p {
-    flex: 1;
-    padding: 0 1rem;
-    
+.wrapper {
+  @apply bg-neutral-100 h-screen flex flex-col items-center;
 }
